Fixes error messages and overflow on comments

--- a/app/assets/stylesheets/debates.scss
+++ b/app/assets/stylesheets/debates.scss
@@ -679,6 +679,7 @@
       .comment-user {
         margin-top: rem-calc(6);
         padding: rem-calc(6) 0;
+        overflow: hidden;
 
         @each $n in ("1", "2", "3","4", "5") {
           &.level-#{$n} {
